--- a/Introduction au Chiffrement - Théories et Pratiques du Chiffrement Symétrique et Asymétrique avec une Étude de Cas sur l'Algorithme RSA/main.tex
+++ b/Introduction au Chiffrement - Théories et Pratiques du Chiffrement Symétrique et Asymétrique avec une Étude de Cas sur l'Algorithme RSA/main.tex
@@ -81,7 +81,7 @@
 \makeatother
 \author{
 	Mathis Lefebvre \\
-	\texttt{lefebvremathis@proton.me}\\ \vspace{60pt} 
+	\href{mailto:lefebvremathis@proton.me}{\texttt{lefebvremathis@proton.me}}\\ \vspace{60pt} 
 	\today
 	}
 
@@ -220,7 +220,7 @@ est un opérateur de l'algèbre booléenne dans lequel le résultat n'est
 \paragraph{Def 1.2.1 :}\label{def-1.2.1}
 
 \textbf{En clair} \textit{(Ex : "Message en clair")} : En cryptographie,
-le terme ``En clair'' fait référence à l'état d'un message ou d'une
+le terme "En clair" fait référence à l'état d'un message ou d'une
 information qui n'a pas été chiffrée d'une quelconque manière et qui est
 compréhensible par tout le monde.
 
@@ -234,7 +234,7 @@ valeur en clair en utilisant un algorithme de chiffrement.
 
 \hspace{2em} La cryptographie est un domaine indéniablement lié au militaire, surtout en France, qui est longtemps restée l'un des pays les plus restrictifs sur le sujet. Ce n'est qu'après la loi sur la réglementation des télécommunications (1996)
 \footnote{\href{https://www.legifrance.gouv.fr/loda/id/JORFTEXT000000733177}{\textit{Loi n° 96-659 du 26 juillet 1996 de réglementation des télécommunications - Légifrance.} (1996, 26 Juillet). Legifrance.gouv.fr.}}
-que la France commencera à adopter une vision différente des méthodes de chiffrement, qui était jusque ici classé comme arme de guerre de deuxième catégorie. Tout cela n'a pas aidé le grand public à démystifier la cryptographie qui, encore aujourd'hui, peut parfois être considéré comme une technologie réservée aux films d'espionnage ou au militaire. Pourtant, à l'ère d'un monde numérique toujours plus connecté, la cryptographie est présente de manière quasi permanente, bien qu'à des degrés différents. C'est notamment cette technologie qui sécurise nos transactions bancaires
+que la France commencera à adopter une vision différente des méthodes de chiffrement, qui était jusque ici classé comme arme de guerre de deuxième catégorie. Tout cela n'a pas aidé le grand public à démystifier la cryptographie qui, encore aujourd'hui, peut parfois être considéré comme une technologie réservée aux films d'espionnage ou au militaire. Pourtant, à l'ère d'un monde numérique toujours plus connecté, la cryptographie est présente de manière quasi permanente, bien qu'à des échelles différentes. C'est notamment cette technologie qui sécurise nos transactions bancaires
 \footnote{\href{https://interstices.info/le-protocole-cryptographique-de-paiement-par-carte-bancaire/}{Thomas Genet. (2008, 21 Février). \textit{Le protocole cryptographique de paiement par carte bancaire.} Interstices.}},
 notre navigation sur internet
 \footnote{\href{https://www.cloudflare.com/fr-fr/learning/ssl/transport-layer-security-tls/}{\textit{Qu’est-ce que le TLS (Transport Layer Security) ?} (n.d.). Cloudflare.}}
