changing folder name

--- a/Introduction au chiffrement/main.tex
+++ b/Introduction au chiffrement/main.tex
@@ -840,7 +840,7 @@ résultats des expériences de factorisation menées en 2009 sur une clé de
 \(768\) bits renforcent cette affirmation, indiquant que le temps requis
 pour une clé de \(2048\) bits serait de plusieurs milliards d'années. \\
 
-Enfin, une conclusion définitive sur un tel sujet reste complexe, l'évolution des méthodes de cryptanalyses et de l'informatique quantique laisse à penser que tôt ou tard, les systèmes cryptographiques actuels finiront par céder et montrer leurs faiblesses. Est-ce pour autant que l'avenir de la cryptographie est alors condamné ? Non, l'être humain se fait la course à lui même, car en cherchant à améliorer nos algorithmes de chiffrement, nous ne faisons que repousser les limites de notre compréhension des mathématiques, et par conséquent, de notre propre capacité de raisonnement et de réflexion. Des exemples comme la cryptographie post-quantique, qui est branche de la cryptographie réservée à la mise en place d'algorithmes résistant à l'informatique quantique, nous montrent bien que nous sommes en capacité de repousser nos propres limites.
+Enfin, une conclusion définitive sur un tel sujet reste complexe, l'évolution des méthodes de cryptanalyses et de l'informatique quantique laisse à penser que tôt ou tard, les systèmes cryptographiques actuels finiront par céder et montrer leurs faiblesses. Est-ce pour autant que l'avenir de la cryptographie est alors condamné ? Non, l'être humain se fait la course à lui même, car en cherchant à améliorer nos algorithmes de chiffrement, nous ne faisons que repousser les limites de notre compréhension des mathématiques, et par conséquent, de notre propre capacité de raisonnement et de réflexion. Des exemples comme la cryptographie post-quantique, qui est une branche de la cryptographie réservée à la mise en place d'algorithmes résistant à l'informatique quantique, nous montrent bien que nous sommes en capacité de repousser nos propres limites.
 
 \section{Lectures Recommandées.}
 
